# bazar-api

./: .dockerignore  .env.local  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  policies.yaml  pyproject.toml  run.py  setup.py  start-dev.sh
alembic/: env.py
alembic/versions/: 63a1d57b5908_initial_schema.py
docker/server/: .env.example  Dockerfile
src/app/: .env.local  main.py
src/app/api/: auth_deps.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: auth.py  files.py  users.py
src/app/core/: config.py  error_handlers.py  events.py  pbac.py
src/app/crud/: __init__.py  base.py  crud_auth.py  crud_files.py  crud_user.py
src/app/db/: init_auth.py  init_db.py  session.py
src/app/db/seed/users/: user1.json  user2.json
src/app/models/: __init__.py  base.py  core.py  platform_role.py  system_role.py  user_plan.py  user_system_role.py
src/app/schemas/: __init__.py  auth.py  base.py  enums.py  file.py  invoke.py  system_role.py  user.py
src/app/services/: auth_service.py  messaging_service.py
src/app/utils/: auth.py  secret_manager.py  storage.py  validation.py
