[tool.poetry]
name = "bazar-api"
version = "0.1.0"
description = "Bazar API"
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = {extras = ["full"], version = "^0.114.1"}
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
hypercorn = "^0.17.3"
pydantic-settings = "^2.5.2"
pydantic = {extras = ["email"], version = "^2.11.3"}
supabase = "^2.7.4"
boto3 = "^1.35.92"
packaging = "24.2"
email-validator = "^2.2.0"
dnspython = "^2.6.1"
idna = "^3.7"
aioboto3 = "^14.1.0"
aiofiles = "^24.1.0"
asyncpg = "^0.30.0"
greenlet = "^3.0.3"
rich = "13.0.0"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
pytest = "^8.3.3"
faker = "^28.4.1"
python-semantic-release = "^9.8.8"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
anyio = "^4.4.0"
alembic = "^1.15.2"

[tool.poetry.scripts]
tests = 'poetry_scripts:run_tests'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
